<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.fragments.RegisterPage"
    android:background="@color/colorPrimary"
    android:id="@+id/register_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="80sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="Для регистрации заполните все поля"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailFieldRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="28dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/colorPrimaryDark"
            app:met_textColorHint="@color/colorPrimaryDarkGray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginRight="28dp"
            android:layout_marginLeft="28dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/passwordFieldRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text=""
                android:textSize="16sp"
                app:met_primaryColor="@color/colorAccent"
                app:met_singleLineEllipsis="true"
                app:met_textColor="@color/colorPrimaryDark"
                app:met_textColorHint="@color/colorPrimaryDarkGray"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/nameFieldRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:hint="@string/name"
            android:inputType="text"
            android:text=""
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/colorPrimaryDark"
            app:met_textColorHint="@color/colorPrimaryDarkGray" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phoneFieldRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:hint="Телефон"
            android:inputType="phone"
            android:text=""
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/colorPrimaryDark"
            app:met_textColorHint="@color/colorPrimaryDarkGray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/authButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/RegisterBtn"
            android:background="@drawable/auth_button"
            android:textColor="@color/colorAccent"
            android:fontFamily="serif-monospace"/>

    </LinearLayout>

    <View
        android:id="@+id/lineRegister"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/authButtons"
        android:background="@color/colorPrimaryGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lineRegister"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-thin"
        android:text="@string/swipeTextRegister"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="italic" />


</RelativeLayout>